--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,9 @@ jobs:
     # 使用别人的action
     - uses: actions/checkout@v2
     # 步骤名称
+    - name: vue init webpack 
+      # 步骤执行指令
+      run: vue init webpack 
     - name: npm install
       # 步骤执行指令
       run: npm install
